# salog

./: .gitignore  Cargo.toml  README.md
src/: count_output.rs  es_get.rs  es_save.rs  file_get.rs  file_save.rs  json_output.rs  json_pretty_output.rs  log_processor.rs  log_processor_options.rs  log_trait.rs  main.rs  summary_output.rs  url_get.rs
src/command/: mod.rs
src/processor/: db.rs  log_entry.rs  log_processor.rs  log_processor_options.rs  log_trait.rs
src/processor/get_log/: es_get.rs  file_get.rs  url_get.rs
src/processor/output_log/: count_output.rs  json_output.rs  json_pretty_output.rs  summary_output.rs
src/processor/save_log/: es_save.rs  file_save.rs
