[package]
name = "salog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.1", features = ["derive"] }
dotenv = "0.15.0"
elasticsearch = "8.5.0-alpha.1"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.3"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde-inline-default = "0.2.0"
serde_json = "1.0.114"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
tokio = { version = "1.36.0", features = ["full"] }
